Fix slider spacing

--- a/src/Styles/StopBar/StopBar.css
+++ b/src/Styles/StopBar/StopBar.css
@@ -1,9 +1,3 @@
 .stopbar-container {
     margin-bottom: 20px;
 }
-
-.stopbar-content {
-    height: 40px;
-    width: 100%;
-    border-radius: 5px;
-}
